--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="watch">0</div>
     <button id="start">start</button>
+    <button id="reset">reset</button>
     <button id="stop">stop</button>
     <script src="script.js"></script>
 </body>
